luitweek22/web-tier-sg.tf
# create web-tier security group
resource "aws_security_group" "web-tier-security-group" {
  name        = "web-tier security group"
  description = "allow access via ssh and http"
  vpc_id      = aws_vpc.vpc.id

  # allow internet traffic
  ingress {
    description = "Allow all SSH"
    from_port   = var.SSH
    to_port     = var.SSH
    protocol    = var.tcp
    cidr_blocks = [var.cidr]
  }

  ingress {
    description = "Allow all HTTP"
    from_port   = var.HTTP
    to_port     = var.HTTP
    protocol    = var.tcp
    cidr_blocks = [var.cidr]
  }

  egress {
    description = "Allow all outbound"
    from_port   = var.egress-all
    to_port     = var.egress-all
    protocol    = var.egress
    cidr_blocks = [var.cidr]
  }

  lifecycle {
    create_before_destroy = true
  }

  tags = {
    Name = "tf-web-tier security group"
  }
}
